--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Finance App</title>
 </head>
-<body>
+<body class="light-mode">
     <div class="container">
         <h1>Finance Tracker</h1>
         <div class="inc-exp-container">
@@ -37,8 +37,9 @@
             <button class="btn" type="submit">Add Transaction</button>
         </form>
 
-        <!-- Save button -->
+        <!-- Save and Toggle Theme buttons -->
         <button class="btn" id="saveButton">Save to File</button>
+        <button class="btn" id="toggleThemeButton">Toggle Theme</button>
     </div>
 
     <script src="script.js"></script>
